@@ -1,11 +1,12 @@
 2007-10-26  Roland Mas  <lolando@debian.org>
 
-	* www/tracker/admin/form-extrafieldcopy.php: Use the role_settings
+	* www/tracker/admin/form-extrafieldcopy.php: Use the role_setting
 	table instead of the artifact_perm view.
+	* www/tracker/reporting/index.php: Ditto.
 
 2007-10-25  Roland Mas  <lolando@debian.org>
 
-	* www/pm/msproject/msp.php: Use the role_settings table instead of
+	* www/pm/msproject/msp.php: Use the role_setting table instead of
 	the project_perm view.
 
 	* www/tracker/mod.php: Ditto for artifact_perm.
